role api update
